# HomeSplit

./: .env.example  Dockerfile  README.md  alembic.ini  compose.yaml  expenses_data.json  household_expenses.py  pyproject.toml
migrations/: README  env.py
migrations/versions/: 0001_initial.py
src/homesplit/: app.py  db.py
